<resources>
    <string name="app_name">APPointment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--NAVIGATION_MENU-->
    <string name="menu_client_appointment">My Appointments</string>
    <string name="menu_client_provider_list">Providers</string>
    <string name="menu_section_client">Client</string>
    <string name="menu_section_provider">Service Provider</string>
    <string name="menu_provider_service">My Service</string>
    <string name="menu_provider_appointments">Appointment</string>
    <string name="menu_provider_review">Reviews</string>


    <!--LOGIN/REGISTRATION-->
    <string name="signing_failed">Signing failed!</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="welcome_message">Welcome to APPoinment.</string>
    <string name="hint_full_name">Full Name</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="empty_fullname_error_msg">Full name could not be blank.</string>
    <string name="empty_phone_number_error_msg">Phone number is required</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading_label">loading</string>
    <string name="action_logout">Logout</string>
    <string name="user_avatar_description">User Profile Image</string>
    <string name="no_service_enable_message">Do you want to enable your service?</string>
    <string name="save_service_changes_warning">Are you sure that you want to update the service info?</string>
    <string name="saving_action">saving…</string>
    <string name="action_enabled">Enabled</string>
    <string name="banner_label">banner</string>
    <string name="banner_uploading">Uploading banner</string>
    <string name="failed_upload">Upload Failed</string>
    <string name="provider_email_label">provider email</string>
    <string name="when_label">when</string>
    <string name="notes_label">notes</string>
    <string name="appointment_creation_msg">Creating new appointment</string>
    <string name="invalid_appointment_information">Invalid Appointment Information</string>
    <string name="invalid_provider_information">Invalid provider Information</string>
    <string name="provider_service_disabled">The requested service is disabled</string>
    <string name="appointment_no_accepted">This appointment has not been accepted by the provider.</string>
    <string name="invalid_review">Review could not be empty</string>
    <string name="creating_new_review">Creating new review</string>
    <string name="appointment_no_completed">This appointment has to be completed to provide reviews.</string>
    <string name="requested_state">Requested</string>
    <string name="accepted_state">Accepted</string>
    <string name="denied_state">Denied</string>
    <string name="completed_state">Completed</string>
    <string name="widget_no_info_available">no info available…</string>
    <string name="widget_review_count">%1$s Reviews</string>
    <string name="add_calendar_permission">Please add calendar permission.</string>
    <string name="no_calendar_available">No calendar available</string>
    <string name="invalid_calendar_entry">Invalid calendar entry</string>
    <string name="appointment_pre_name">"Appointment: "</string>
    <string name="calendar_event_inserted">Inserted calendar event.</string>
</resources>
