<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_edit_service_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.manpdev.appointment.ui.activity.CreateAppointmentActivity">


            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/rg_appointment_state"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:text="@string/requested_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_requested"
                    android:layout_weight="1"
                    android:padding="@dimen/half_dimen" />

                <RadioButton
                    android:text="@string/accepted_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_accept"
                    android:layout_weight="1"
                    android:padding="@dimen/half_dimen" />

                <RadioButton
                    android:text="@string/denied_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_reject"
                    android:layout_weight="1"
                    android:padding="@dimen/half_dimen" />

                <RadioButton
                    android:text="@string/completed_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb_completed"
                    android:layout_weight="1"
                    android:padding="@dimen/half_dimen" />
            </RadioGroup>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_time"
                app:layout_constraintTop_toBottomOf="@+id/rg_appointment_state"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:textStyle="normal|italic" />

            <Button
                android:id="@+id/bn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                tools:ignore="HardcodedText"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/bn_cancel"
                app:layout_constraintHorizontal_bias="1.0" />

            <Button
                android:id="@+id/bn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                tools:ignore="HardcodedText"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_time"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>