<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/activity_edit_service_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.manpdev.appointment.ui.activity.CreateAppointmentActivity">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText"
                    android:id="@+id/et_provider_email"
                    android:hint="@string/provider_email_label" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/when_label"
                    tools:ignore="HardcodedText"
                    android:id="@+id/et_appointment_date"
                    android:inputType="datetime" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/notes_label"
                    tools:ignore="HardcodedText"
                    android:id="@+id/et_appointment_notes" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                tools:ignore="HardcodedText"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/bn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                tools:ignore="HardcodedText"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintRight_toLeftOf="@+id/bn_save"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>